--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&family=Pacifico&display=swap"
       rel="stylesheet"
     />
-
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
