--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&family=Maven+Pro:wght@400;500;600;700;800;900&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://unpkg.com/phosphor-icons"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -31,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Kasim Nadim</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
